[package]
name = "gardening-gun"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.10", features = ["bevy_scene", "bevy_gltf"] }
bevy-egui-kbgp = "0.12.0"
bevy-tnua = { version = "0.2.1", features = ["rapier_2d"] }
 bevy-yoleck = { version = "0.11.0", features = ["vpeol_3d"] }
bevy_egui = "0.20.2"
bevy_pkv = "0.7.0"
bevy_rapier2d = "0.21.0"
clap = { version = "4.2.1", features = ["derive"] }
leafwing-input-manager = "0.9.1"
ordered-float = "3.6.0"
serde = "1.0.159"
